# funnsamOS

./: Cargo.toml  README.md  _config.yml  boot.s  build.bat  build.rs  index.md  main.go  push.bat  terminal.go  terminal.gox
QNA/: index.md
codes/: boot.s  terminal.go
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  main.rs  memory.rs  psf.rs  stacktrace.rs
kernel/src/cpu/: gdt.rs  idt.rs  mod.rs
kernel/src/drivers/: mod.rs  serial.rs  video.rs
src/: main.rs
